# project_hdf_meta

./: .gitignore  README.md  block_size_test.sh  block_size_test_read_only.sh  core.3946211  core.3947961  core.3948124  core.4093879  core.4094063  core.4112237  core.4112349  core.4112403  h5ex_d_chunk  h5ex_d_chunk.h5  h5ex_g_iterate  h5ex_g_traverse  h5ex_g_traverse.c  proj_file_dup  proj_file_dup.c  proj_file_g_dup.c  proj_read_dup  proj_read_h5  readheader.c  test.text  test.txt  train64_cp.h5
C_scripts/: file_dup  file_dup.c  file_dup_b_size  file_dup_b_size.c  file_iter_l_name  file_iter_l_name.c  file_iter_o_name  file_iter_o_name.c  read_dset.c
PnetCDF-Python/: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
PnetCDF-Python/include/: PnetCDF.pxi
PnetCDF-Python/src/PnetCDF/: _PnetCDF.pyx  __init__.py
PnetCDF-Python/src/pncpy/: _Dimension.c  _Dimension.pxd  _Dimension.pyx  _File.c  _File.pxd  _File.pyx  __init__.py  _utils.pxd  _utils.pyx
PnetCDF-Python/test/: tst_dim_create.py  tst_file_create.py  tst_file_open.py  tst_noclobber.py
darshan_reports/: file_iter_l_name_train64_0.txt  file_iter_l_name_train64_1024.txt  file_iter_l_name_train64_2048.txt  file_iter_l_name_train64_2048_dxt.txt  file_iter_l_name_train64_2048_dxt_coalesce_sorted.txt  file_iter_l_name_train64_2048_dxt_raw_sorted.txt  file_iter_l_name_train64_2097152.txt  file_iter_l_name_train64_256.txt  file_iter_l_name_train64_4096.txt  file_iter_l_name_train64_4194304.txt  file_iter_l_name_train64_4194304_dxt.txt  file_iter_l_name_train64_4194304_dxt_coalesce.txt  (+27 more)
(+47 files in other folders)
